--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,11 @@ section.ejercicio6 img {
   border: 2px dashed black;
 }
 
+body.ejercicio7 {
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+}
 header.ejercicio7 h1 {
   background-color: black;
   color: white;
@@ -214,7 +219,8 @@ section.ejercicio7 article:nth-of-type(3) {
 
 section.ejercicio7 article img {
   padding: 20px;
-  max-width: 100%;
+  max-width: 90%;
+  object-fit: cover;
 }
 section.ejercicio7 article h2 {
   text-align: center;
@@ -226,4 +232,124 @@ section.ejercicio7 article p {
 
 section.ejercicio7 article {
   max-width: 33.33%;
+}
+
+body.ejercicio8 {
+  font-family: Arial, Helvetica, sans-serif;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+header.ejercicio8 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+header.ejercicio8 figure {
+  display: flex;
+  justify-content: center;
+  background-color: greenyellow;
+  margin: 0;
+}
+header.ejercicio8 img {
+  max-width: 200px;
+}
+
+header.ejercicio8 nav {
+  background-color: green;
+}
+
+header.ejercicio8 nav ul {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+  display: flex;
+  gap: 10px;
+}
+header.ejercicio8 nav ul li a {
+  color: white;
+  display: block;
+  padding: 15px;
+}
+
+figure.cabecera {
+  margin: 0;
+}
+
+figure.cabecera img {
+  width: 100%;
+  height: 300px;
+}
+
+article.tipoalojamiento {
+  padding: 20px;
+  border: 5px solid black;
+  border-top-left-radius: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  border-bottom-right-radius: 30px;
+}
+
+article.tipoalojamiento:nth-of-type(1) {
+  border-color: rgb(197, 150, 20);
+  background-color: rgb(255, 240, 158);
+}
+article.tipoalojamiento:nth-of-type(2) {
+  border-color: rgb(38, 114, 28);
+  background-color: rgb(136, 253, 165);
+}
+article.tipoalojamiento:nth-of-type(3) {
+  border-color: rgb(21, 8, 211);
+  background-color: rgb(145, 189, 248);
+}
+article.tipoalojamiento i {
+  font-size: 50px;
+}
+article.tipoalojamiento:nth-of-type(1) i {
+  color: rgb(197, 150, 20);
+}
+
+article.tipoalojamiento:nth-of-type(2) i {
+  color: rgb(38, 114, 28);
+}
+
+article.tipoalojamiento:nth-of-type(3) i {
+  color: rgb(21, 8, 211);
+}
+
+article.tipoalojamiento h2 {
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+article.tipoalojamiento p {
+  font-size: 20px;
+}
+
+aside.opiniones {
+  background-color: rgb(194, 190, 190);
+  padding: 20px;
+  border-top: 10px solid black;
+  border-bottom: 10px solid black;
+}
+
+aside.opiniones h3 {
+  text-transform: uppercase;
+  font-style: italic;
+}
+
+article.opiniones i {
+  font-size: 60px;
+}
+article.opiniones {
+  padding: 20px;
+}
+
+div.estrellas {
+  display: flex;
+  align-items: end;
+  gap: 20px;
+}
+
+article.opiniones p {
+  font-size: 20px;
 }
